--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "day_241209.problem_2504.Main",
+      "projectName": "6. algorithme_7d74588b"
+    },
+    {
+      "type": "java",
       "name": "Case1",
       "request": "launch",
       "mainClass": "day_241205.problem_1145.Case1",
